[package]
name = "jureba-bot"
version = "0.1.0"
authors = ["a3ch <cmbyep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7.0"
tokio = { version = "0.2", features = ["fs", "time", "macros"]}
futures = "0.3"

regex = "1.4.2"
reqwest = "0.10.9"